@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kleopatra
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kleopatra/ChangeLog,v 1.46 2010/03/31 22:45:32 spatz Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kleopatra/ChangeLog,v 1.47 2010/05/03 20:57:35 alexxy Exp $
+
+*kleopatra-4.4.3 (03 May 2010)
+
+  03 May 2010; Alexey Shvetsov <alexxy@gentoo.org> +kleopatra-4.4.3.ebuild:
+  Version bump
 
   31 Mar 2010; Dror Levin <spatz@gentoo.org> -kleopatra-4.3.4.ebuild,
   -kleopatra-4.4.0.ebuild:
